<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp">

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_name"
        android:layout_below="@id/edtLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_email"
        android:layout_below="@id/edtName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_password_hint"
        android:inputType="textPassword"
        android:layout_below="@id/edtEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_confirm_password"
        android:inputType="textPassword"
        android:layout_below="@id/edtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_up"
        android:textSize="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/edtConfirmPassword"/>

</RelativeLayout>